[gd_scene load_steps=4 format=3 uid="uid://cuvesbak463tt"]

[ext_resource type="PackedScene" uid="uid://cjslfxwttaovi" path="res://scenes/base_crt_screen.tscn" id="1_y42ix"]
[ext_resource type="Script" path="res://scripts/options_screen.gd" id="2_ifgjt"]
[ext_resource type="FontFile" uid="uid://bsnsssrwpkme5" path="res://fonts/5ceta_mono.ttf" id="3_toc6j"]

[node name="OptionsScreen" instance=ExtResource("1_y42ix")]
script = ExtResource("2_ifgjt")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/InformationContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Background/InformationContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Background/InformationContainer/VBoxContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0, 0.745098, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0.745098, 0, 1)
theme_override_fonts/font = ExtResource("3_toc6j")
theme_override_font_sizes/font_size = 10
text = "Back"
flat = true

[node name="Title" type="Label" parent="Background/InformationContainer/VBoxContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_toc6j")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="HBoxContainer" type="HBoxContainer" parent="Background/InformationContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/InformationContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_toc6j")
theme_override_font_sizes/font_size = 20
text = "Sound FX"

[node name="SoundFxButton" type="CheckButton" parent="Background/InformationContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
button_pressed = true

[node name="Label2" type="Label" parent="Background/InformationContainer/VBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_toc6j")
theme_override_font_sizes/font_size = 20
text = "Shortcuts"
horizontal_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="Background/InformationContainer/VBoxContainer" index="3"]
layout_mode = 2

[connection signal="toggled" from="Background/InformationContainer/VBoxContainer/HBoxContainer/SoundFxButton" to="." method="_on_sound_fx_button_toggled"]
